Add table play route
