# internal/pkg/bet/model.go
@@ -20,13 +20,29 @@ type Update struct {
 	Bet
 }
 
+// Result is the round result from a game.
+type Result struct {
+	Number  int      `json:"number"`
+	Color   string   `json:"color"`
+	Winners []Winner `json:"winners"`
+}
+
+// Winner is a winning bet from a round.
+type Winner struct {
+	BetID    uuid.UUID `json:"betId"`
+	Amount   int64     `json:"amount"`
+	Currency string    `json:"currency"`
+}
+
+const (
+	colorRed   = "red"
+	colorBlack = "black"
+	colorGreen = "green"
+)
+
 // Type is the supported Bet type.
 var (
 	TypeRedBlack = "red/black"
-	TypeOddEven  = "odd/even"
-	TypeHighLow  = "high/low"
-	TypeColumn   = "column"
-	TypeDozen    = "dozen"
 	TypeStraight = "straight"
 )
 
@@ -34,10 +50,24 @@ var (
 var TypeMultiplierMap = map[string]int64{
 	// Outside bets
 	TypeRedBlack: 1,
-	TypeOddEven:  1,
-	TypeHighLow:  1,
-	TypeColumn:   2,
-	TypeDozen:    2,
 	// Inside bets
 	TypeStraight: 35,
+}
+
+func betToWinner(b Bet) Winner {
+	return Winner{
+		BetID:    b.ID,
+		Amount:   b.Amount,
+		Currency: b.Currency,
+	}
+}
+
+func betListToWinner(b []Bet) []Winner {
+	winners := make([]Winner, len(b))
+
+	for i := range b {
+		winners[i] = betToWinner(b[i])
+	}
+
+	return winners
 }
